<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MDTS</string>

    <string name="home">Home</string>
    <string name="my_library">My library</string>
    <string name="top_charts">Top charts</string>
    <string name="new_releases">New releases</string>
    <string name="radio">Radio</string>
    <string name="podcasts">Podcasts</string>
    <string name="settings_and_account">Settings &amp; account</string>
    <string name="now_playing">Now playing</string>
    <string name="playlist_name">Playlist name</string>

    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="username">Username</string>
    <string name="email_address">email address</string>

    <string name="playlists">Playlists</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>

    <string name="song_name">Song name</string>
    <string name="artist_album_name">Artist name • Album name</string>

    <string name="rewind">Rewind</string>
    <string name="pause">Pause</string>
    <string name="forward">Forward</string>
    <string name="queue">Queue</string>
    <string name="remove">Remove</string>

    <string name="album_art">Album art</string>

    <string name="transition_name_album">album_%s</string>
    <string name="transition_name_now_playing">now_playing</string>

</resources>
