<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainNavGraph"
    app:startDestination="@id/home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@id/home"
        android:name="io.material.mdts.ui.ItemFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@id/myLibrary"
        android:name="io.material.mdts.ui.ItemFragment"
        android:label="@string/my_library"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@id/topCharts"
        android:name="io.material.mdts.ui.ItemFragment"
        android:label="@string/top_charts"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@id/newReleases"
        android:name="io.material.mdts.ui.ItemFragment"
        android:label="@string/new_releases"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@id/radio"
        android:name="io.material.mdts.ui.ItemFragment"
        android:label="@string/radio"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@id/podcasts"
        android:name="io.material.mdts.ui.ItemFragment"
        android:label="@string/podcasts"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@id/settingsAndAccount"
        android:name="io.material.mdts.ui.ItemFragment"
        android:label="@string/settings_and_account"
        tools:layout="@layout/fragment_item" />

</navigation>
