<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.App.ControlHighlightOnPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/songName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginEnd="@dimen/spacing"
            android:layout_marginTop="@dimen/spacing_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/song_name" />

        <TextView
            android:id="@+id/artistAlbumName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs"
            android:layout_marginBottom="@dimen/spacing_large"
            app:layout_constraintStart_toStartOf="@id/songName"
            app:layout_constraintEnd_toEndOf="@id/songName"
            app:layout_constraintTop_toBottomOf="@id/songName"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/material_on_primary_emphasis_medium"
            android:text="@string/artist_album_name" />

        <ImageButton
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_more_24dp"
            android:contentDescription="@string/pause"
            android:tint="?attr/colorOnPrimary"
            android:background="?attr/selectableItemBackgroundBorderless" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant">

        <ImageButton
            android:id="@+id/rewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_fast_rewind_24dp"
            android:contentDescription="@string/rewind"
            android:tint="?attr/colorOnPrimary"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <ImageButton
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_pause_24dp"
            android:contentDescription="@string/pause"
            android:tint="?attr/colorOnPrimary"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <ImageButton
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_fast_forward_24dp"
            android:contentDescription="@string/forward"
            android:tint="?attr/colorOnPrimary"
            android:background="?attr/selectableItemBackgroundBorderless" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing"
        android:textAppearance="?attr/textAppearanceOverline"
        android:text="@string/queue" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/list_item_queue" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/list_item_queue" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/list_item_queue" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/list_item_queue" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_space_now_playing" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing"
        android:text="@string/remove"
        android:layout_gravity="center" />

</LinearLayout>
