<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.App.CardView.NowPlaying">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="@dimen/size_album_art_image"
            android:layout_height="@dimen/size_album_art_image"
            android:layout_margin="@dimen/spacing_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.App.ShapeableImageView.AlbumArt.Small"
            app:srcCompat="@drawable/image" />

        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toTopOf="@id/image"
            app:layout_constraintBottom_toTopOf="@id/artistAlbumName"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="?attr/colorOnPrimarySurface"
            android:text="@string/song_name" />

        <TextView
            android:id="@+id/artistAlbumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/songName"
            app:layout_constraintTop_toBottomOf="@id/songName"
            app:layout_constraintBottom_toBottomOf="@id/image"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/on_primary_surface_emphasis_medium"
            android:text="@string/artist_album_name" />

        <ImageButton
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_pause_24dp"
            android:contentDescription="@string/pause"
            android:tint="?attr/colorOnPrimarySurface"
            android:background="?attr/selectableItemBackgroundBorderless" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
